Subindo algumas alterações e correções de bug como, corrigido o z-index do dropdown de menu e deixado a header seguindo por toda a página

--- a/Site/styles/style.css
+++ b/Site/styles/style.css
@@ -12,6 +12,9 @@ header {
     height: 70px;
     width: 100%;
     background-color: #16578d;
+    position: fixed;
+    top: 0;
+    z-index: 3;
 }
 
 /* Começo Container Logo */
@@ -86,6 +89,7 @@ header .nav_2 {
 
     header .nav_2 {
         display: flex;
+        z-index: 4;
     }
 
     header .container_links {
@@ -101,6 +105,7 @@ header .nav_2 {
     header .container_links {
         width: 100%;
         margin-left: 1rem;
+        justify-content: space-between;
     }
 }
 
@@ -151,7 +156,6 @@ header .nav_2 #buttonMenu_dropdown:hover {
 header .nav_2 span {
     display: flex;
     align-items: center;
-    margin: 0 1rem 0 0;
     color: #fff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -159,8 +163,7 @@ header .nav_2 span {
 header .nav_2 #menu_dropdown {
     display: none;
     position: absolute;
-    top: 10%;
-    margin-top: .8rem;
+    top: 70px;
     z-index: 1;
 }
 
@@ -223,6 +226,7 @@ header .logar a {
 /* Começo Main */
 
 main {
+    margin-top: 70px;
     display: flex;
     width: 100%;
     height: 800px;
@@ -592,6 +596,11 @@ main .boxSides .side2 .side2Two {
     font-weight: bold;
     margin: 0 1rem;
     box-shadow: 1px 1px 10px 1px #ffffff;
+    transition: .5s;
+}
+
+.entreContato .cadastrar a:hover {
+    transform: scale(1.1);
 }
 
 .entreContato .contato {
@@ -656,6 +665,14 @@ main .boxSides .side2 .side2Two {
     margin: 0 1rem;
 }
 
+.entreContato .contato .redes img {
+    transition: .5s;
+}
+
+.entreContato .contato .redes img:hover {
+    transform: scale(1.1);
+}
+
 .entreContato .contato .mensagem {
     width: 60%;
 }
@@ -676,6 +693,11 @@ main .boxSides .side2 .side2Two {
     color: #ffffff;
     font-weight: bold;
     cursor: pointer;
+    transition: .5s;
+}
+
+.entreContato .contato .mensagem .input_button:hover {
+    transform: scale(1.1);
 }
 
 .entreContato .contato .mensagem textarea {
