--- a/Site/styles/styleCadastro.css
+++ b/Site/styles/styleCadastro.css
@@ -13,6 +13,9 @@ header {
     height: 70px;
     width: 100%;
     background-color: #16578d;
+    position: fixed;
+    top: 0;
+    z-index: 3;
 }
 
 /* Começo Container Logo */
@@ -102,6 +105,7 @@ header .nav_2 {
     header .container_links {
         width: 100%;
         margin-left: 1rem;
+        justify-content: space-between;
     }
 }
 
@@ -152,7 +156,6 @@ header .nav_2 #buttonMenu_dropdown:hover {
 header .nav_2 span {
     display: flex;
     align-items: center;
-    margin: 0 1rem 0 0;
     color: #fff;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
@@ -160,8 +163,7 @@ header .nav_2 span {
 header .nav_2 #menu_dropdown {
     display: none;
     position: absolute;
-    top: 10%;
-    margin-top: .8rem;
+    top: 70px;
     z-index: 1;
 }
 
@@ -222,6 +224,7 @@ header .logar a {
 /* Fim Header */
 
 main {
+    margin-top: 70px;
     height: 875px;
     display: flex;
     flex-direction: row;
