--- a/Site/styles/styleSimuladorFinanceiro.css
+++ b/Site/styles/styleSimuladorFinanceiro.css
@@ -21,6 +21,9 @@ header {
     height: 70px;
     width: 100%;
     background-color: #16578d;
+    position: fixed;
+    top: 0;
+    z-index: 3;
 }
 
 /* Começo Container Logo */
@@ -230,6 +233,7 @@ header .logar a {
 /* Fim Header */
 
 main {
+    margin-top: 70px;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -242,7 +246,7 @@ main {
     width: 40%;
     justify-content: space-around;
     align-items: center;
-    height: 92vh;
+    height: 875px;
 }
 
 h1 {
@@ -342,7 +346,7 @@ main button {
     align-items: center;
     justify-content: space-around;
     gap: 1rem;
-    height: 92vh;
+    height: 875px;
 }
 
 .card {
